Fix z-index issues.

--- a/client/app/styles/_base.scss
+++ b/client/app/styles/_base.scss
@@ -208,25 +208,19 @@ a {
 }
 
 .header {
+  z-index: $layer-front;
   padding: 15px 10px 0;
   pointer-events: none;
+  position: relative;
   width: 100%;
-
-  .time-travel-wrapper {
-    position: relative;
-    z-index: $layer-front;
-  }
 
   .selectors {
     display: flex;
     position: relative;
 
     > * {
-      z-index: $layer-front;
       flex: 1 1;
     }
-
-    .time-control { z-index: $layer-modal; }
 
     .logo {
       margin: -16px 0 0 8px;
